--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/vuetify": "^1.12.3",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "sass": "^1.56.1",
+    "vite-svg-loader": "^3.6.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuetify": "^3.0.1",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.4"
   }
 }
